# DispatchManagementSystem

./: CMakeLists.txt  README.md
Database/: dispatch_db.sql
Diagrams/: block diagram.uxf  class diagram.uxf  sequence diagram.uxf  use case.uxf
JSON/: JSON_encoder.h  JSON_parser.h  cJSON.c  cJSON.h
Structures/: Client.h  Connection.h  Driver.h  DriverArray.h  Location.h  Order.h  Server.h  Structures.h  Vehicle.h
View/: Client.h  ClientView.h  Driver.h  DriverView.h  SysadminView.h  sysadminView.h
glabal_var/: global_var.h
global_var/: enums.h  global_var.h
src/: DMSystem_starter.c  Server.h  Structures.h  global_var.h
src/Client/: Client_main.c
src/Server/: DMSystem_starter.c
src/driver/: Driver.h  driver.h  driver_main.c
src/sysadmin/: DriverArray.h  Sysadmin.h  database.db  main.c  sysadmin.h  sysadminView.h  sysadmin_main.c
utilities/: string_splitting.h
